--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crossterm = "0.29.0"
 directories = "6.0.0"
 rand = "0.9.2"
 ratatui = "0.30.0"
-rusqlite = "0.38.0"
+rusqlite = { version = "0.38.0", features = ["bundled"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 thiserror = "2.0.17"
